--- a/index.html
+++ b/index.html
@@ -1,10 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio - Jaki Nurhadiyansah</title>
 </head>
 <body>
-    <h1>Portofolio Jaki Nurhadiyansah</h1>
-    <p>Mahasiswa Teknik Informatika dengan minat pada Keamanan Jaringan dan DevOps. Portofolio sedang dalam pengembangan!</p>
+
+    <header>
+        <nav>
+            <a href="#tentang">Tentang Saya</a>
+            <a href="#keahlian">Keahlian</a>
+            <a href="#proyek">Proyek</a>
+            <a href="#kontak">Kontak</a>
+        </nav>
+    </header>
+
+    <main>
+        <section id="hero">
+            <h1>Jaki Nurhadiyansah</h1>
+            <p>DevOps & Cybersecurity Enthusiast</p>
+        </section>
+
+        <section id="tentang">
+            <h2>Tentang Saya</h2>
+            <p>
+                Saya adalah mahasiswa Teknik Informatika yang sangat antusias dengan dunia DevOps dan Cybersecurity...
+            </p>
+        </section>
+
+        <section id="keahlian">
+            <h2>Keahlian</h2>
+            <ul>
+                <li>Python</li>
+                <li>Docker</li>
+                <li>Git & GitHub</li>
+                <li>Nmap</li>
+                <li>Linux</li>
+            </ul>
+        </section>
+
+        <section id="proyek">
+            <h2>Proyek</h2>
+            <article>
+                <h3>Proyek 1: CI/CD Pipeline Aman</h3>
+                <p>
+                    Ini adalah proyek untuk membangun alur kerja otomatis yang mengintegrasikan pemindaian keamanan...
+                </p>
+            </article>
+            <article>
+                <h3>Proyek 2: Analisis Jaringan dengan Python</h3>
+                <p>
+                    </p>
+            </article>
+        </section>
+
+    </main>
+
+    <footer id="kontak">
+        <h2>Hubungi Saya</h2>
+        <p>
+            Anda bisa menghubungi saya melalui:
+            <a href="URL_LINKEDIN_ANDA">LinkedIn</a> | 
+            <a href="https://github.com/Jackynur">GitHub</a> | 
+            Email: email.anda@contoh.com
+        </p>
+    </footer>
+
 </body>
 </html>
